--- a/项目1/o2o/.classpath
+++ b/项目1/o2o/.classpath
@@ -12,8 +12,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/classes" path="src/main/resource"/>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/resource"/>
+	<classpathentry excluding="spring/|mapper/" kind="src" output="target/classes" path="src/main/resources"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/resources"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/resources/spring"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/resources/mapper"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
